--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,44 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div class="container">
 
-<%= yield %>
+    <ul class="nav nav-tabs">
+      <li><%= link_to "Home", root_path %></li>
+      <li><%= link_to "Lists", lists_path %></li>
 
+
+      <div class="pull-right user-info">
+        <% if user_signed_in? %>
+           Signed in as: <strong><%= current_user.email %></strong> |
+           <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+         <% else %>
+           <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
+           <%= link_to "Log In", new_user_session_path, :class => 'navbar-link'  %>
+         <% end %>
+       </div>
+     </ul>
+
+       <% if flash[:notice] %>
+        <div class="alert alert-success">
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+          <%= flash[:notice] %>
+        </div>
+        <% elsif flash[:error] %>
+      <div class="alert alert-danger">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <%= flash[:error] %>
+      </div>
+      <% elsif flash[:alert] %>
+      <div class="alert alert-warning">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <%= flash[:alert] %>
+      </div>
+     <% end %>
+
+
+    <%= yield %>
+
+  </div>
 </body>
 </html>
