Views under construction and Post controller added

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,7 +3,7 @@
 
   <div class="row">
     <div class="col-md-4">
-      <p>Adding yourself to LFG:</p>
+      <p>Edit your LFG post:</p>
       <ul>
         <li>Fill out the necessary fields and find your group!</li>
       </ul>
