--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,6 @@
 <h2>Sign up</h2>
+<h3>Why sign up?</h3>
+<p>To keep the community clean and free of spam, to find your group faster!</p>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
