--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
     <ul class="nav nav-tabs">
       <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "Lists", lists_path %></li>
+      <li><%= link_to "Posts", posts_path %></li>
 
 
       <div class="pull-right user-info">
