--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,15 @@
 <div class=container>
   <h1>Post to a LFG</h1>
   <div class="row">
-    <%= link_to "New Post", new_post_path, class: 'btn btn-success' %>
+    <%= link_to "New LFG Post", new_post_path, class: 'btn btn-success' %>
   </div>
 
   <div class="panel-heading cleafix">
     <h2>Filter your LFG search</h2>
+
+    ## #Search begin
+
+    <%= render @post._form %>
       <div class="clearfix">
         <div class="filter-third">
           <div class="styled-select styled-blue">
@@ -21,6 +25,8 @@
             <select id="searchGames">
               <option value="destiny">Destiny</option>
               <option value="grandTheftAuto">Grand Theft Auto Online</option>
+              <option value="nba2k">NBA 2k</option>
+              <option value="dragonageinquisition">Dragon Age: Inquisition</option>
             </select>
           </div>
         </div>
@@ -29,53 +35,69 @@
           <div class="styled-select styled-blue">
             <select id="searchActivityDestiny">
               <optgroup label="Crucible">
-                <option value="%">Trials of Osiris (Flawless)</option>
-                <option value="%">Trials of Osiris (Casual/Fun)</option>
-                <option value="%">Trials of Osiris (Sherpa)</option>
-                <option value="%">Iron Banner</option>
-                <option value="%">Rift</option>
-                <option value="%">3v3</option>
-                <option value="%">6v6</option>
+                <option value="too-flawless">Trials of Osiris Flawless </option>
+                <option value="too-fun">Trials of Osiris Casual/Fun </option>
+                <option value="too-sherpa">Trials of Osiris Sherpa </option>
+                <option value="iron-banner">Iron Banner</option>
+                <option value="rift">Rift</option>
+                <option value="3v3">3v3</option>
+                <option value="6v6">6v6</option>
               </optgroup>
               <optgroup label="Raid Normal Mode">
-                <option value="%">Vault of Glass (Fresh Run) - Normal</option>
-                <option value="%">Vault of Glass (Checkpoint) - Normal</option>
-                <option value="%">Vault of Glass (Aetheon) - Normal</option>
-                <option value="%">Vault of Glass (Sherpa Help) - Normal</option>
-                <option value="%">Crota's End (Fresh Run) - Normal</option>
-                <option value="%">Crota's End (Checkpoint) - Normal</option>
-                <option value="%">Crota's End (Crota) - Normal</option>
-                <option value="%">Crota's End (Sherpa Help) - Normal</option>
-                <option value="%">King's Fall (Fresh Run) - Normal</option>
-                <option value="%">King's Fall (Totems) - Normal</option>
-                <option value="%">King's Fall (Warpriest) - Normal</option>
-                <option value="%">King's Fall (Golgoroth) - Normal</option>
-                <option value="%">King's Fall (Daughters) - Normal</option>
-                <option value="%">King's Fall (Oryx) - Normal</option>
-                <option value="%">King's Fall (Sherpa Help) - Normal</option>
+                <option value="vog-norm-fr">Vault of Glass Fresh Run - Normal</option>
+                <option value="vog-norm-cp">Vault of Glass Checkpoint - Normal</option>
+                <option value="vog-norm-boss">Vault of Glass Aetheon - Normal</option>
+                <option value="vog-norm-sherpa">Vault of Glass Sherpa Help - Normal</option>
+                <option value="crota-norm-fr">Crota's End Fresh Run - Normal</option>
+                <option value="crota-norm-cp">Crota's End Checkpoint - Normal</option>
+                <option value="crota-norm-boss">Crota's End Crota - Normal</option>
+                <option value="crota-norm-sherpa">Crota's End Sherpa Help - Normal</option>
+                <option value="kf-norm-fr">King's Fall Fresh Run - Normal</option>
+                <option value="kf-norm-totems">King's Fall Totems - Normal</option>
+                <option value="kf-norm-warpriest">King's Fall Warpriest - Normal</option>
+                <option value="kf-norm-golgoroth">King's Fall Golgoroth - Normal</option>
+                <option value="kf-norm-daughters">King's Fall Daughters - Normal</option>
+                <option value="kf-norm-oryx">King's Fall Oryx - Normal</option>
+                <option value="kf-norm-sherpa">King's Fall Sherpa Help - Normal</option>
               </optgroup>
               <optgroup label="Raid Hard Mode">
-                <option value="%">Vault of Glass (Fresh Run) - Hard</option>
-                <option value="%">Vault of Glass (Checkpoint) - Hard</option>
-                <option value="%">Vault of Glass (Aetheon) - Hard</option>
-                <option value="%">Vault of Glass (Sherpa Help) - Hard</option>
-                <option value="%">Crota's End (Fresh Run) - Hard</option>
-                <option value="%">Crota's End (Checkpoint) - Hard</option>
-                <option value="%">Crota's End (Crota) - Hard</option>
-                <option value="%">Crota's End (Sherpa Help) - Hard</option>
-                <option value="%">King's Fall (Fresh Run) - Hard</option>
-                <option value="%">King's Fall (Totems) - Hard</option>
-                <option value="%">King's Fall (Warpriest) - Hard</option>
-                <option value="%">King's Fall (Golgoroth) - Hard</option>
-                <option value="%">King's Fall (Daughters) - Hard</option>
-                <option value="%">King's Fall (Oryx) - Hard</option>
-                <option value="%">King's Fall (Sherpa Help) - Hard</option>
+                <option value="vog-hard-fr">Vault of Glass Fresh Run - Hard</option>
+                <option value="vog-hard-cp">Vault of Glass Checkpoint - Hard</option>
+                <option value="vog-hard-boss">Vault of Glass Aetheon - Hard</option>
+                <option value="vog-hard-sherpa">Vault of Glass Sherpa Help - Hard</option>
+                <option value="crota-hard-fr">Crota's End Fresh Run - Hard</option>
+                <option value="crota-hard-cp">Crota's End Checkpoint - Hard</option>
+                <option value="crota-hard-boss">Crota's End Crota - Hard</option>
+                <option value="crota-hard-sherpa">Crota's End Sherpa Help - Hard</option>
+                <option value="kf-hard-fr">King's Fall Fresh Run - Hard</option>
+                <option value="kf-hard-totems">King's Fall Totems - Hard</option>
+                <option value="kf-hard-warpriest">King's Fall Warpriest - Hard</option>
+                <option value="kf-hard-golgoroth">King's Fall Golgoroth - Hard</option>
+                <option value="kf-hard-daughters">King's Fall Daughters - Hard</option>
+                <option value="kf-hard-oryx">King's Fall Oryx - Hard</option>
+                <option value="kf-hard-sherpa">King's Fall Sherpa Help - Hard</option>
               </optgroup>
             </select>
           </div>
         </div>
 
         <div class="filter-third">
+          <div class="styled-select styled-white">
+            <select id="searchDestinyLightLevel">
+              <optgroup label="Light Level">
+                <option value="320"Light 320>
+                <option value="310"Light 310+>
+                <option value="300"Light 300+>
+                <option value="290"Light 290+>
+                <option value="280"Light 280+>
+                <option value="260"Light 260+>
+                <option value="240"Light 240+>
+                <option value="220"Light 220+>
+                <option value="200"Light 200+>
+                <option value="180"Light 180+ or lower>
+              </optgroup>
+            </select>
+          </div>
         </div>
 
       ##  #IF GRAND THEFT AUTO SELECTED
@@ -83,35 +105,29 @@
           <div class="styled-select styled-blue">
             <select id="searchActivityGrandTheftAutoOnline">
               <optgroup label="Heists">
-                <option value="%">The Fleeca Job (Fresh)</option>
-                <option value="%">The Fleeca Job</option>
-                <option value="%">The Prison Break (Fresh)</option>
-                <option value="%">The Prison Break</option>
-                <option value="%">The Humane Labs Raid (Fresh)</option>
-                <option value="%">The Humane Labs Raid</option>
-                <option value="%">Series A Funding (Fresh)</option>
-                <option value="%">Series A Funding</option>
-                <option value="%">The Pacific Standard Job (Fresh)</option>
-                <option value="%">The Pacific Standard Job</option>
+                <option value="heist-flecca">The Fleeca Job</option>
+                <option value="heist-prison">The Prison Break</option>
+                <option value="heist-humane">The Humane Labs Raid</option>
+                <option value="heist-funding">Series A Funding</option>
+                <option value="heist-pacific">The Pacific Standard Job</option>
               </optgroup>
               <optgroup label="Freemode">
-                <option value="%">V.I.P. Work</option>
-                <option value="%">Randumbness</option>
+                <option value="freemode-vip">V.I.P. Work</option>
+                <option value="freemode-random">Randumbness</option>
               </optgroup>
               <optgroup label="Vinewood Movie Studios">
-                <option value="%">Casting</option>
+                <option value="casting">Casting</option>
               </optgroup>
               <optgroup label="Jobs">
-                <option value="%">Last Team Standing</option>
-                <option value="%">Adversary Mode</option>
-                <option value="%">Team Deathmatch</option>
-                <option value="%">Mission</option>
-                <option value="%">Select Activity</option>
-                <option value="%">Select Activity</option>
-              </optgroup>
-              <optgroup label="Racing">
-                <option value="%">Playlist</option>
-                <option value="%">Random</option>
+                <option value="jobs-lts">Last Team Standing</option>
+                <option value="jobs-am">Adversary Mode</option>
+                <option value="jobs-tm">Team Deathmatch</option>
+                <option value="jobs-racing">Racing</option>
+                <option value="jobs-mission">Mission</option>
+                <option value="jobs-capture">Capture</option>
+                <option value="jobs-versus">Versus</option>
+                <option value="jobs-survival">Survival</option>
+                <option value="jobs-parachuting">Parachuting</option>
               </optgroup>
             </select>
           </div>
@@ -120,6 +136,46 @@
         <div class="filter-third">
         </div>
       </div>
+
+      ## #If NBA 2k
+
+      <div class="filter-third filter-middle">
+        <div class="styled-select styled-blue">
+          <select id="searchActivityNBA2k">
+            <optgroup label="My Career">
+              <option value="2k-my-park">My Park</option>
+              <option value="2k-pro-am">2K Pro-Am</option>
+            </optgroup>
+          </select>
+        </div>
+      </div>
+
+      <div class="filter-third">
+      </div>
+
+      ## #If Dragon Age: Inquisition
+
+      <div class="filter-third filter-middle">
+        <div class="styled-select styled-blue">
+          <select id="searchActivityDAInquisition">
+            <optgroup label="Regular Multiplayer Playlist">
+              <option value="da-routine">Routine</option>
+              <option value="da-threatening">Threatening</option>
+              <option value="da-perilous">Perilous</option>
+            </optgroup>
+            <optgroup label="High Dragon Multiplayer Playlist">
+              <option value="dragon-routine">Dragon - Routine</option>
+              <option value="dragon-threatening">Dragon - Threatening</option>
+              <option value="dragon-perilous">Dragon - Perilous</option>
+            </optgroup>
+          </select>
+        </div>
+      </div>
+
+      <div class="filter-third">
+      </div>
+
+      ## #Mic Search box
 
       <div class="clearfix">
         <div class="filter-third filter-check">
