--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -213,13 +213,11 @@
 
       <div class="form-group text-area has-feedback has-success">
         <textarea rows="4" name="notesComment" id="notesComment" placeholder="(optional)" data-fv-field="notesComment"></textarea>
-        <span class="help-block">Looking for something more specific?  List it above.  140 char max.
+        <span class="help-block">Looking for something more specific?  List it above.  140 char max.</span>
       </div>
 
     </div>
 ## #end of panel-heading clearfix
-
-#All posts shown below or according to filter
 
 
 
