--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -103,6 +103,19 @@
 
         <br>
 
+        <div class="filter-third filter-middle">
+          <div class="styled-select styled-blue">
+            <select id="post_searchDestinyClass" name="post[searchDestinyClass]">
+              <option value="%">Select Class</option>
+              <option value="destinyHunter">Hunter</option>
+              <option value="destinyWarlock">Warlock</option>
+              <option value="destinyTitan">Titan</option>
+            </select>
+          </div>
+        </div>
+
+        <br>
+
         <div class="filter-third">
           <div class="styled-select styled-white">
             <select id="post_searchDestinyLightLevel" name="post[searchDestinyLightLevel]">
@@ -225,11 +238,15 @@
             <option value="da-routine">Routine</option>
             <option value="da-threatening">Threatening</option>
             <option value="da-perilous">Perilous</option>
+            <option value="da-nightmare">Nightmare</option>
+            <option value="da-heartbreaker">Heartbreaker</option>
           </optgroup>
           <optgroup label="High Dragon Multiplayer Playlist">
             <option value="dragon-routine">Dragon - Routine</option>
             <option value="dragon-threatening">Dragon - Threatening</option>
             <option value="dragon-perilous">Dragon - Perilous</option>
+            <option value="dragon-nightmare">Dragon - Nightmare</option>
+            <option value="dragon-heartbreaker">Dragon - Heartbreaker</option>
           </optgroup>
         </select>
       </div>
