--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,12 @@
 
     <ul class="nav nav-tabs">
       <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "Posts", posts_path %></li>
+      <li><%= link_to "Listings", posts_path %></li>
 
 
       <div class="pull-right user-info">
         <% if user_signed_in? %>
-           Signed in as: <strong><%= current_user.email %></strong> |
+           Signed in as: <strong><%= current_user.name %></strong> |
            <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
          <% else %>
            <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
@@ -35,7 +35,7 @@
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <%= flash[:error] %>
       </div>
-      <% elsif flash[:alert] %>
+        <% elsif flash[:alert] %>
       <div class="alert alert-warning">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <%= flash[:alert] %>
