--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,40 +1,3 @@
 <div class="container">
-  <h1>Register New List</h1>
-
-  <div class="row">
-    <div class="col-md-4">
-      <p>Adding yourself to LFG:</p>
-      <ul>
-        <li>Fill out the necessary fields and find your group!</li>
-      </ul>
-    </div>
-    <div class="col-md-8">
-      <%= form_for @post do |f| %>
-        <div class="form-group">
-          <%= f.label :name %>
-          <%= f.text_field :name %>
-        </div>
-        <div class="bfh-selectbox" data-name="selectbox1">
-          <div data-value="1">Option 1</div>
-          <div data-value="2">Option 2</div>
-          <div data-value="3">Option 3</div>
-          <div data-value="4">Option 4</div>
-          <div data-value="5">Option 5</div>
-          <div data-value="6">Option 6</div>
-          <div data-value="7">Option 7</div>
-          <div data-value="8">Option 8</div>
-          <div data-value="9">Option 9</div>
-          <div data-value="10">Option 10</div>
-          <div data-value="11">Option 11</div>
-          <div data-value="12">Option 12</div>
-          <div data-value="13">Option 13</div>
-          <div data-value="14">Option 14</div>
-          <div data-value="15">Option 15</div>
-        </div>
-        <div class="form-group">
-          <%= f.submit "Submit!", class: 'btn btn-success' %>
-        </div>
-      <% end %>
-    </div>
-  </div>
+  <%= render "form" %>
 </div>
